--- a/1-modelos/video/makefile
+++ b/1-modelos/video/makefile
@@ -1,3 +1,7 @@
+all: 1-modelos.mkv 1-modelo-practica.mkv
+
 1-modelos.mkv:
 	wget https://github.com/MetodosBayesianos/IBC1.2025.2/releases/download/videos/1-modelos.mkv
 
+1-modelo-practica.mkv:
+	https://github.com/MetodosBayesianos/IBC1.2025.2/releases/download/videos/1-modelo-practica.mkv
